--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 a{text-decoration: none;}
 kbd{border:1px solid red;width: 2em; height: 2em;display: inline-block;
     text-transform: uppercase;}
+main{
+    text-align: center;
+}
 main > div:nth-child(2){
     margin-left: 1em;
 }
