--- a/style.css
+++ b/style.css
@@ -16,12 +16,23 @@ kbd{border:1px solid red;width: 4em; height: 4em;display: inline-block;
 }
 kbd > button{
     position: absolute;
-    right: 0;
-    bottom: 0;
+    right: 2px;
+    bottom: 2px;
+    width: 28px;
+    height: 16px;
+    font-size: 11px;
+    font-weight: bold;
     display: none;
+    border: none;
+    border-radius: 4px;
 }
 kbd:hover > button{
     display: inline-block;
+}
+.text{
+    position: absolute;
+    top: 4px;
+    left: 5px;
 }
 .key{
     width: 55px;
@@ -56,4 +67,7 @@ main >.wrapper > div:nth-child(3){
 kbd > img{
     width: 16px;
     height: 16px;
+    position: absolute;
+    left: 2px;
+    bottom: 2px;
 }
